About Meganite UI Issue on Safari Fixed

--- a/src/app/about-meganite/about-meganite.component.scss
+++ b/src/app/about-meganite/about-meganite.component.scss
@@ -16,7 +16,7 @@
 }
 .AboutMeganitePageImage {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   position: relative;
   background-color: white;
 }
